[package]
name = "tcp-transfer-ice"
version = "0.5.0"
edition = "2021"
authors = ["TCP Transfer Team"]
description = "TCP file transfer with NAT traversal (hole punching)"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "net", "time", "sync", "io-util", "fs", "macros"] }

# Efficient buffer management
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography (SHA256 for final verification)
sha2 = "0.10"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Progress bar
indicatif = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Socket options for hole punching
socket2 = { version = "0.5", features = ["all"] }

# Unix specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
